scss/grid/_layout.scss
/* ... */
// PDF export
.k-loading-pdf-mask {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 100;

    > .k-i-loading {
        position: absolute;
        top: 50%;
        left: 50%;
        font-size: 64px;
    }

    .k-loading-pdf-progress {
        margin: auto;
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
    }

}

.k-grid-pdf-export-element {
    position: absolute;
    left: -10000px;
    top: -10000px;

    .k-filter-row {
        display: none;
    }
}


@include exports( "filtermenu/layout" ) {

    .k-filter-menu {
        padding: $padding-y-sm;

        .k-button {
            margin: ( $spacer-y / 2 ) 1% 0;
            width: 48%;
            box-sizing: border-box;
            display: inline-block;
        }

        .k-widget,
        .k-textbox {
            margin: ( $spacer-y / 2 ) 0 0;
            width: 100%;
            display: block;
        }
        .k-textbox {
            margin-bottom: 3px;
        }


        .k-widget.k-filter-and {
            width: 6em;
            margin: .5em 0;
        }
    }
    .k-multicheck-wrap {
        max-height: 300px;
        overflow: auto;
        overflow-x: hidden;
        white-space: nowrap;

        .k-item {}
        .k-item + .k-item {
            margin-top: ($spacer-y / 2);
        }

        .k-label {
            margin: 0;
            display: flex;
            align-items: center;
            cursor: pointer;

            input {
                margin: 0 ($spacer-y / 4);
            }
        }
    }
    .k-filter-selected-items {
        font-weight: bold;
        line-height: normal;
        white-space: nowrap;
        margin: $spacer-y 0 ($spacer / 2);
    }

    // autofitting requires automatic table layout to measure sizes
    .k-autofitting {
        // sass-lint:disable-block no-important

        width: auto !important;
        table-layout: auto !important;

        th.k-header,
        td {
            white-space: nowrap !important;
        }

        .k-detail-row {
            display: none !important;
        }
    }

}

